--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:tokimeki-editing.helloWorld"
+    "onCommand:tokimeki-editing.helloWorld",
+    "onLanguage:markdown"
   ],
   "main": "./out/extension.js",
   "contributes": {
