--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,7 +9,7 @@ jobs:
   e2e:
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -19,4 +19,7 @@ jobs:
       with:
         node-version: 16.x
     - run: npm install
+    - run: xvfb-run -a npm test
+      if: runner.os == 'Linux'
     - run: npm test
+      if: runner.os != 'Linux'
